# eui

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  screenshot.ppm
.github/workflows/: build.yml
cmake/: Findraylib.cmake  eui_config.cmake
configs/esp32/: ili9341_spi_320x240_16bpp.Kconfig  ili9341_spi_320x240_16bpp.cmake  ssd1306_i2c_128x64_1bpp.Kconfig  ssd1306_i2c_128x64_1bpp.cmake  st7306_spi_300x400_2bpp.Kconfig  st7306_spi_300x400_2bpp.cmake  st7306_spi_400x300_2bpp.cmake  st7735_spi_240x240_16bpp.Kconfig  st7735_spi_240x240_16bpp.cmake
configs/nrf52/: ssd1306_i2c_128x64_1bpp.Kconfig  ssd1306_i2c_128x64_1bpp.cmake  st7735_spi_240x240_16bpp.Kconfig  st7735_spi_240x240_16bpp.cmake
configs/pc/: raylib_128x64_1bpp.cmake  raylib_240x240_16bpp.cmake  raylib_400x300_2bpp.cmake
configs/web/: canvas_128x64_1bpp.cmake  canvas_240x240_16bpp.cmake  canvas_400x300_2bpp.cmake
docs/: api_reference.md  eui_framework_design.md  example_guidelines.md  porting_guide.md  quick_start.md
examples/: CMakeLists.txt  amiibo_demo.c  amiibo_font.h  amiibo_icons.h  animation_demo.c  basic_label.c  benchmark.c  button_test.c  color_demo.c  custom_widget.c  dialog_overlay.c  list_nav.c  menu_system.c  page_buffer.c  render_16bpp.c  scene_view_demo.c
examples/cross/: CMakeLists.txt
examples/cross/amiibo_demo/: CMakeLists.txt  amiibo_demo.c  amiibo_font.h  requirements.cmake
examples/cross/animation_demo/: CMakeLists.txt  animation_demo.c  requirements.cmake
examples/cross/basic_label/: CMakeLists.txt  basic_label.c  requirements.cmake
examples/cross/benchmark/: CMakeLists.txt  Kconfig  benchmark.c  requirements.cmake
examples/cross/button_test/: CMakeLists.txt  button_test.c  requirements.cmake
examples/cross/color_demo/: CMakeLists.txt  color_demo.c  requirements.cmake
examples/cross/custom_widget/: CMakeLists.txt  custom_widget.c  requirements.cmake
examples/cross/desktop_launcher/: CMakeLists.txt  desktop_launcher.c  requirements.cmake
examples/cross/dialog_overlay/: CMakeLists.txt  dialog_overlay.c  requirements.cmake
examples/cross/esp_idf_build/: .gitignore  CMakeLists.txt  build_all.sh
examples/cross/esp_idf_build/main/: CMakeLists.txt
examples/cross/list_nav/: CMakeLists.txt  list_nav.c  requirements.cmake
examples/cross/menu_system/: CMakeLists.txt  Kconfig  menu_system.c  requirements.cmake
examples/cross/page_buffer/: CMakeLists.txt  page_buffer.c  requirements.cmake
examples/cross/scene_view_demo/: CMakeLists.txt  Kconfig  requirements.cmake  scene_view_demo.c
examples/esp-idf/ssd1306/: CMakeLists.txt  DEPRECATED.md
examples/esp-idf/ssd1306/main/: main.c
examples/esp-idf/st7735/: CMakeLists.txt  DEPRECATED.md
examples/esp-idf/st7735/main/: CMakeLists.txt  main.c
examples/icons/: convert_icons.py
include/eui/: eui.h  eui_allocator.h  eui_anim.h  eui_canvas.h  eui_config.h.in  eui_display_drv.h  eui_display_hal.h  eui_event.h  eui_font.h  eui_font_builtin.h  eui_font_internal.h  eui_font_u8g2_internal.h  eui_font_wqy13.h  eui_input.h  eui_input_drv.h  eui_input_hal.h  eui_port_bootstrap.h  eui_scene.h  eui_str.h  eui_types.h  eui_view.h  eui_view_dispatcher.h  eui_widget.h  eui_widget_button.h  eui_widget_dialog.h  eui_widget_label.h  eui_widget_list.h  (+4 more)
port/esp-idf/: CMakeLists.txt  README.md  eui_port_bootstrap.c  eui_port_esp_idf.c  eui_port_esp_idf.h
port/esp-idf/eui_port/: CMakeLists.txt
port/esp-idf/include/eui/: eui_config.h
port/nrf5/: CMakeLists.txt  README.md  eui_port_bootstrap.c  eui_port_nrf5.c  eui_port_nrf5.h  sdk_config.h  toolchain.cmake
port/web/: CMakeLists.txt  README.md  eui_port_bootstrap.c  gen_index.cmake  shell.html.in  shell.js
src/: CMakeLists.txt  eui.c  eui_allocator.c  eui_anim.c  eui_canvas.c  eui_event.c  eui_font.c  eui_font_bdf.c  eui_font_builtin.c  eui_font_internal.h  eui_font_u8g2.c  eui_font_u8g2_internal.h  eui_font_vlw.c  eui_font_wqy13.c  eui_hal_raylib.c  eui_input.c  eui_scene.c  eui_str.c  eui_types.c  eui_view.c  eui_view_dispatcher.c  eui_widget.c  eui_widget_button.c  eui_widget_dialog.c  eui_widget_label.c  eui_widget_list.c  eui_widget_menu.c  eui_widget_progress.c  eui_widget_scroll.c  eui_widget_slider.c
src/driver/: eui_drv_buttons.c  eui_drv_encoder.c  eui_drv_ili9341.c  eui_drv_raylib.c  eui_drv_sh1106.c  eui_drv_ssd1306.c  eui_drv_st7306.c  eui_drv_st7735.c  eui_drv_web.c  eui_drv_xpt2046.c
src/hal/: eui_hal_raylib.c
src/widget/: eui_widget.c  eui_widget_button.c  eui_widget_dialog.c  eui_widget_label.c  eui_widget_list.c  eui_widget_menu.c  eui_widget_progress.c  eui_widget_scroll.c  eui_widget_slider.c
test/: CMakeLists.txt  config_16bpp.h  config_2bpp.h  config_4bpp.h  test_allocator.c  test_canvas.c  test_canvas_16bpp.c  test_canvas_render.c  test_drivers.c  test_event.c  test_font.c  test_font_canvas.c  test_font_kerning.c  test_font_kerning.h  test_font_multiline.c  test_font_real_u8g2_render.c  test_font_u8g2.c  test_font_vs_u8g2.c  test_font_wqy12_chinese.c  test_font_wqy13_render.c  test_input.c  test_str.c  test_u8g2_font.h  test_u8g2_wqy12_ch1_data.h  test_view.c  test_view_transition.c  test_view_transition_render.c  test_vlw_font.h  test_widget.c
test/allocator/: test_allocator.c
test/canvas/: test_canvas.c  test_canvas_16bpp.c  test_canvas_2bpp.c  test_canvas_4bpp.c  test_canvas_render.c
test/common/: eui_test.h  eui_test_canvas.h
test/data/: test_font_kerning.h  test_u8g2_profont10_data.h
test/drivers/: test_drivers.c
test/event/: test_event.c
test/font/: test_font_canvas.c  test_font_formats.c  test_font_kerning.c  test_font_multiline.c  test_font_real_u8g2_render.c  test_font_vs_u8g2.c  test_font_wqy13_render.c  test_wqy13_kerning.c
test/input/: test_input.c
test/str/: test_str.c
test/view/: test_view.c  test_view_transition.c  test_view_transition_render.c  test_widget.c
tools/: analyze_font.py  analyze_png.c  analyze_ppm.c  check_u8g2_font.py  config_to_header.cmake  convert_u8g2_font.py  gen_test_u8g2_font.py  gen_test_u8g2_kerning.py  gen_test_vlw.py  kconfig_to_header.cmake
(+53 files in other folders)
