# examples/cross/CMakeLists.txt
# Cross-platform examples — linked against BOOTSTRAP_LIB based on EUI_TARGET_PORT
add_subdirectory(basic_label)
add_subdirectory(button_test)
add_subdirectory(list_nav)
add_subdirectory(menu_system)
add_subdirectory(dialog_overlay)
add_subdirectory(animation_demo)
add_subdirectory(custom_widget)
add_subdirectory(page_buffer)
add_subdirectory(benchmark)
add_subdirectory(scene_view_demo)
add_subdirectory(color_demo)
